spacing fixed and images enlarged

--- a/css/main.css
+++ b/css/main.css
@@ -275,13 +275,13 @@ p {
   color: #fff;
   border: none;
   padding: 12px 24px;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 700;
   border-radius: 10px;
   margin-top: 1em;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 200px;
+  width: 250px;
   padding: 20px;
 }
 
@@ -328,13 +328,12 @@ p {
   align-items: center;
   text-align: center;
   background-color: #55132d;
-  padding: 6em;
+  padding: 3em;
 }
 
 .section-title {
   font-size: 18px;
   font-weight: 500;
-  margin-bottom: 8px;
 }
 
 .main-title {
@@ -349,12 +348,11 @@ p {
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
   margin-bottom: 24px;
-  padding: 0.3em;
 }
 
 .trip-card {
   border-radius: 15px;
-  padding: 16px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -362,9 +360,9 @@ p {
 }
 
 .trip-card-image {
-  width: 278px;
-  height: 278px;
-  border-radius: 20px;
+  width: 350px;
+  height: 350px;
+  border-radius: 30px;
   background-size: cover;
   background-position: center;
 }
@@ -386,14 +384,14 @@ p {
 }
 
 .trip-card-title {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
   margin-bottom: 1px;
   text-align: center;
 }
 
 .trip-card-description {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 00;
   margin-bottom: 0;
   text-align: center;
@@ -406,7 +404,7 @@ p {
   padding: 22px 40px;
   margin-left: 25em;
   margin-top: 2em;
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 700;
   cursor: pointer;
   border-radius: 10px;
@@ -422,7 +420,7 @@ p {
 .footer {
   background-color: white;
   color: black;
-  padding: 60px;
+  padding: 80px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -477,6 +475,7 @@ p {
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
+  grid-gap: 10px;
 }
 
 .nav-links a {
@@ -521,7 +520,7 @@ p {
 
 .SocialTile {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 22px;
   margin-bottom: 30px;
   align-self: flex-start;
 }
@@ -625,8 +624,8 @@ width: 30%;
 }
 
 .review p{
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 16px;
+  font-weight: 300;
   color: grey;
 }
 
@@ -657,13 +656,15 @@ width: 30%;
 .button-group {
   display: flex;
   justify-content: start;
-  margin-top: 20px;
+  margin-top: 2em;
+  margin-bottom: 3em;
 }
 
 .info-btn,
 .book-btn {
   padding: 8px 16px;
-  font-size: 16px;
+  font-size: 22px;
+  font-weight: 600;
   border: none;
   border-radius: 10px;
   color: #e7bc80;
@@ -719,11 +720,10 @@ width: 30%;
 }
 
 .details p{
-  font-size: 20px;
-  font-weight: 400;
+  font-size: 18px;
+  font-weight: 200;
   margin-bottom: 16px;
-  text-align: start;
-  color: grey
+  color: rgb(162, 162, 162);
 }
 
 .view-cart button {
@@ -860,8 +860,8 @@ h3 {
 }
 
 .image-container-os img {
-  width: 609px 
-  height: 649px;
+  width: 800px;
+  height: auto;
   border-radius: 12px;
 }
 
